--- a/tuberepair/templates/classic/featured.jinja2
+++ b/tuberepair/templates/classic/featured.jinja2
@@ -49,8 +49,8 @@
     <yt:accessControl action="syndicate" permission="allowed" />
     <gd:comments><gd:feedLink href='{{url}}/feeds/api/videos/{{video['videoId']}}/comments'/></gd:comments>
     <yt:statistics favoriteCount="0" viewCount="{{video['viewCount']}}" />
-<gd:rating average="5" max="5" min="1" numRaters="8101" rel="http://schemas.google.com/g/2005#overall" />
-    <yt:rating numDislikes="0" numLikes="8101" />
+<gd:rating average="5" max="5" min="1" numRaters="{{video["dislikes"] + video["likes"]}}" rel="http://schemas.google.com/g/2005#overall" />
+    <yt:rating numDislikes="{{video["dislikes"]}}" numLikes="{{video["likes"]}}" />
 <yt:hd />
     <media:group>
       <media:category label="Music" scheme="http://gdata.youtube.com/schemas/2007/categories.cat">Music</media:category>
@@ -66,8 +66,6 @@
       <media:thumbnail url="https://i.ytimg.com/vi/{{video['videoId']}}/default.jpg" height="90" width="120" yt:name="default" />
 			<media:thumbnail url="https://i.ytimg.com/vi/{{video['videoId']}}/default.jpg" height="180" width="320" yt:name="mqdefault" />
       <media:thumbnail url="https://i.ytimg.com/vi/{{video['videoId']}}/default.jpg" height="360" width="480" yt:name="hqdefault" />
-      <media:thumbnail url="https://i.ytimg.com/vi/{{video['videoId']}}/default.jpg" height="480" width="640" yt:name="sddefault" />
-      <media:thumbnail url="https://i.ytimg.com/vi/{{video['videoId']}}/default.jpg" height="720" width="1280" yt:name="naxresdefault" />
       <media:title type="plain">{{video['title']}}</media:title>
       <yt:aspectRatio>widescreen</yt:aspectRatio>
       <yt:duration seconds="{{video['lengthSeconds']}}" />
